feat: Refine UI layout and stage management